test/asm/const-low.err
error: Expected constant expression: `Gamma` is not constant at assembly time
    at const-low.asm(10)
error: Assertion failed
    at const-low.asm(10)
Assembly aborted with 2 errors!
